# deep-research-skill

./: .env.example  .gitignore  INSTALL.md  README.md  pyproject.toml
skills/deep-research/: SKILL.md
skills/linkedin/: SKILL.md  pyproject.toml
skills/linkedin/cli/: Cargo.toml
skills/linkedin/cli/src/: main.rs
skills/linkedin/scripts/: linkedin_composio.py
skills/person-research/: SKILL.md
skills/reddit/: DEPENDENCIES.md  SKILL.md  pyproject.toml  requirements.txt
skills/reddit/scripts/: get_flairs.py  get_post.py  get_post_comments_url.py  get_posts.py  get_rules.py  get_subreddit.py  get_subreddit_details.py  get_user.py  reddit_api.py  reddit_composio.py  scrapecreators_api.py  search_posts.py  search_subreddit.py
skills/twitter/: DEPENDENCIES.md  SKILL.md  pyproject.toml  requirements.txt
skills/twitter/scripts/: twitter_api.py  twitter_composio.py
skills/wechat-article/: INSTALL.md  SKILL.md
skills/wechat-article/cli/: Cargo.toml
skills/wechat-article/cli/src/: main.rs
skills/wechat-article/scripts/: download_article.py  list_articles.py  search_account.py  wechat_api.py
skills/youtube/: SKILL.md
skills/youtube/scripts/: credential.py  get_channel_info.py  get_comments.py  get_playlist.py  get_transcript.py  get_video_info.py  search_video.py  youtube_api.py
