[package]
name = "linkedin"
version = "0.1.0"
edition = "2024"
description = "LinkedIn data CLI via HarvestAPI - profiles, companies, jobs, posts"

[[bin]]
name = "linkedin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toon-format = "0.4"
ureq = { version = "3", features = ["json"] }
