[package]
name = "wxa"
version = "0.1.0"
edition = "2024"
description = "WeChat Article CLI with TOON output"

[[bin]]
name = "wxa"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toon-format = "0.4"
regex = "1"
